--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>make-me-a-simple-accounting-app-for-my-business--i</title><script src="https://unpkg.com/react@18/umd/react.production.min.js"></script><script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script><script src="https://unpkg.com/@babel/standalone/babel.min.js"></script><script src="https://cdn.tailwindcss.com"></script></head><body><div id="root"></div><script type="text/babel">[object Object]</script></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>It works 🎉</title>
+    <style>
+      body { font-family: system-ui, sans-serif; display:grid; place-items:center; height:100vh; margin:0; }
+      main { text-align:center; }
+      a { display:inline-block; margin-top:12px; }
+    </style>
+  </head>
+  <body>
+    <main>
+      <h1>Deployed! 🚀</h1>
+      <p>This site is served by Vercel from <code>index.html</code>.</p>
+      <p>Try the API: <a href="/api" target="_blank" rel="noreferrer">/api</a></p>
+    </main>
+  </body>
+</html>
